# fastapi-nosql-template

./: .coveragerc  .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  compose.yaml  pyproject.toml  pytest.ini
nginx/: default.conf
scripts/: build.sh
src/app/: main.py
src/app/api/: __init__.py  api.py  dependencies.py
src/app/api/graphql/: __init__.py  graphql.py  resolvers.py
src/app/api/routers/: user.py
src/app/api/v1/: __init__.py  api_v1_router.py
src/app/api/v1/routers/: admin.py  auth.py  customers.py  google_auth.py  health.py  sellers.py  user.py  users.py
src/app/api/v2/: __init__.py  api_v2_router.py
src/app/api/v2/routers/: items.py  products.py
src/app/core/: config.py  logger.py
src/app/core/database/: mongo.py  redis.py
src/app/core/db/: __init__.py  mongo.py  redis.py
src/app/core/errors/: __init__.py  limiter.py
src/app/core/middleware/: __init__.py  limiter.py
src/app/core/schemas/: admin.py  customers.py  etc.py  graphql.py  products.py  sellers.py  student.py  token.py  user.py  utils.py
src/app/core/security/: jwt.py  utils.py
src/app/core/services/oauth/: google.py  (+1 more)
src/app/crud/: __init__.py  base.py  base_crud.py  product_crud.py  user.py  user_crud.py
src/tests/: conftest.py
src/tests/routes/: health_test.py  test_admin.py  test_auth.py  test_customers.py  test_graphql.py  test_health.py  test_products.py  test_sellers.py  test_user.py  test_users.py
tests/: MOCKING_STRATEGY.md  README.md  conftest.py  test_auth.py  test_products.py  test_sellers.py  test_user.py  test_users.py
