[project]
name = "fastapi-nosql-template"
version = "0.1.0"
description = ""
authors = [
    {name = "the truth"}
]
license = {text = "MIT"}
requires-python = ">=3.11,<4.0"
packages = [
  { include = "app", from = "src" }
]
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "argon2-cffi (>=23.1.0,<24.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pymongo (>=4.13.0,<5.0.0)",
    "mongomock-motor (>=0.0.35,<0.1.0)",
    "aiohttp (>=3.12.13,<4.0.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "cryptography>=45.0.6",
    "slowapi>=0.1.9",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "authlib>=1.6.6",
    "itsdangerous>=2.2.0",
    "strawberry-graphql[fastapi]>=0.289.8",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["app"]
